Gave the GitHub ribbon a z-index to prevent it being covered by the current content

--- a/server/static/css/main.css
+++ b/server/static/css/main.css
@@ -40,6 +40,7 @@ body {}
     top: 0;
     right: 0;
     border: 0;
+    z-index: 2;
 }
 
 .content-title {
